# RoVi2_PicknPlace

./: README.md
Presentation/: ROVI2 _ status.pptx
ROVI2_ex2/release/: .cproject  .project  CMakeCache.txt  Makefile  cmake_install.cmake
ROVI2_ex2/src/: CMakeLists.txt  CMakeLists.txt~  ROVI2_ex2.cpp
Report/: .gitignore
Report/RoVi2-group8/: bibliography.tex~
Report/RoVi2-group8_backup/: bibliography.tex~
Report/RoVi2-group8_backup/usefull_files/: references.txt
Report/RoVi2-group8_newbackup/usefull_files/: image.txt
Report/report_Imara_new/: IvDinten_Embedded.aux  IvDinten_Embedded.bbl  IvDinten_Embedded.blg  IvDinten_Embedded.run.xml  IvDinten_Embedded.tex  IvDinten_Embedded.toc  RoVi2_Group8.tex  Template.toc  biblio.bib~
Vision/Contour/: Makefile  contourFinder  findContour.cpp
Vision/Contour/Test/: CMakeCache.txt  DisplayImage  Makefile  cmake_install.cmake
Vision/ContourVideo/: Makefile  findContourVideo  findContourVideo.cpp
Vision/Edge/: Makefile  edge  image.cpp  myTools.cpp  myTools.hpp  select.cpp  sobel.cpp
Vision/FeatureDetection/: Makefile  featureDetection
Vision/Final/: Image_converter.cpp  Image_converter.cpp~  Makefile  detectColour.cpp  detectColour.hpp  detectFeature.cpp  findContour.hpp  util.cpp  weirdErrors.txt
Vision/contourOfColour/: Makefile  contourOfColour
Vision/contourOfColourFeatureDetection/: Makefile  contourOfColour.cpp  detectFeature.hpp  featureDetection.cpp  findContour.cpp  inc.hpp  main.cpp  util.hpp
Vision/detectColour/: Makefile  detectColour  detectColour.cpp
